# zatamap-trade-rust

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: ticker.md
src/: kite.rs  main.rs  ticks.rs
src/api/: mod.rs  routes.rs
src/auth/: autologin.rs  mod.rs  selenium.rs
src/bootstrap/: mod.rs  startup.rs
src/core/: config.rs  error.rs  mod.rs  state.rs
src/dao/: instrument_dao.rs  mod.rs  profile_dao.rs
src/db/: mod.rs
src/instruments/: mod.rs
src/kite/: auth.rs  client.rs  types.rs  ws.rs
