[package]
name = "zatamap-trade-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "=0.11.18", default-features = false, features = ["json", "rustls-tls"] }
url = "=2.4.1"
h2 = "=0.3.21"
indexmap = "=1.9.3"
axum = { version = "=0.6.20", features = ["json"] }
tokio-postgres = "=0.7.7"
postgres-types = "=0.2.7"
postgres-protocol = "=0.6.7"
sha2 = "=0.10.8"
hex = "=0.4.3"
urlencoding = "=2.1.3"
base32 = "=0.4.0"
sha1 = "=0.10.6"
hmac = "=0.12.1"
base64 = "=0.21.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.56"
tokio = { version = "=1.32.0", features = ["macros", "rt-multi-thread"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

