[package]
name = "zatamap-trade-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "=0.11.18", default-features = false, features = ["json", "rustls-tls"] }
csv = "=1.3.0"
url = "=2.4.1"
h2 = "=0.3.21"
indexmap = "=1.9.3"
axum = { version = "=0.6.20", features = ["json"] }
tower-http = { version = "=0.4.4", features = ["trace"] }
tokio-postgres = "=0.7.7"
tokio-postgres-rustls = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
webpki-roots = "0.22"
postgres-types = "=0.2.7"
postgres-protocol = "=0.6.7"
bytes = "=1.5.0"
futures-util = "=0.3.31"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "fmt", "json"] }
sha2 = "=0.10.8"
hex = "=0.4.3"
urlencoding = "=2.1.3"
base32 = "=0.4.0"
sha1 = "=0.10.6"
hmac = "=0.12.1"
base64 = "=0.21.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.56"
tokio = { version = "=1.32.0", features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal"] }
chrono = { version = "=0.4.31", default-features = false, features = ["clock"] }

# Kite WebSocket (ticker) + in-memory tick store
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.21", default-features = false }
dashmap = "5.5"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

